Modified html document files.

--- a/iugonet/load_udas_doc_list.html
+++ b/iugonet/load_udas_doc_list.html
@@ -11,7 +11,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Mon Apr 11 11:20:29 2011.<P>
+<STRONG>Last modified: </STRONG>Tue Apr 12 10:10:56 2011.<P>
  
 <HR>
  
@@ -722,7 +722,7 @@ ACKNOWLEDGEMENT:
  PROCEDURE: iug_load_gmag_mm210
    to load the 210 MM geomagnetic data from the STEL ERG-SC site 
 
- NOTE: This procedure is a simple alias to "<A href="iugonet/erg_ground/geomag_udas_doc_list.html#ERG_LOAD_GMAG_NIPR">ERG_LOAD_GMAG_NIPR</A>" 
+ NOTE: This procedure is a simple alias to "erg_load_gmag_nipr" 
    and calls the original one by just providing the same 
    arguments/keywords given.
    Some load procedures for the ground-based observational data 
@@ -787,7 +787,7 @@ ACKNOWLEDGEMENT:
  PURPOSE:
    Loading the fluxgate magnetometer data obtained by NIPR.
 
- NOTE: This procedure is a simple alias to "<A href="iugonet/erg_ground/geomag_udas_doc_list.html#ERG_LOAD_GMAG_NIPR">ERG_LOAD_GMAG_NIPR</A>" 
+ NOTE: This procedure is a simple alias to "erg_load_gmag_nipr" 
    and calls the original one by just providing the same 
    arguments/keywords given.
    Some load procedures for the ground-based observational data 
