Modified html document files.

--- a/_udas_doc.html
+++ b/_udas_doc.html
@@ -2,17 +2,17 @@
 <html>
  
 <head>
-<TITLE>Help for udas_beta</TITLE>
+<TITLE>Help for udas_1_00_b1</TITLE>
 </head>
  
 <body>
-<H2>Help for udas_beta</H2>
+<H2>Help for udas_1_00_b1</H2>
 <P>
 This page was created by the IDL library routine 
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Tue Apr 12 10:10:56 2011.<P>
+<STRONG>Last modified: </STRONG>Tue May 10 00:08:29 2011.<P>
  
 <HR>
  
@@ -21,6 +21,8 @@ This page was created by the IDL library routine
 <A HREF="#LIST_A">A</A>
 ,
 <A HREF="#LIST_E">E</A>
+,
+<A HREF="#LIST_F">F</A>
 ,
 <A HREF="#LIST_G">G</A>
 ,
@@ -52,15 +54,18 @@ iugonet/erg_ground/radar/superdarn</A>
 <LI><A HREF="iugonet/gui_udas_doc_list.html#ACKNOWLEDGEMENT_MESSAGE">
 ACKNOWLEDGEMENT_MESSAGE</A>
 <A NAME="LIST_E">
-<LI><A HREF="iugonet/examples_udas_doc_list.html#ERG_CRIB_GMAG_MM210">
-ERG_CRIB_GMAG_MM210</A>
-<LI><A HREF="iugonet/examples_udas_doc_list.html#ERG_CRIB_GMAG_NIPR">
-ERG_CRIB_GMAG_NIPR</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#ERG_CRIB_SUPERDARN">
 ERG_CRIB_SUPERDARN</A>
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#
 ERG_LOAD_SDFIT">ERG_LOAD_SDFIT</A>
 <br>Load fitacf CDF files of SuperDARN as tplot variables.
+<A NAME="LIST_F">
+<LI><A HREF="iugonet/load_udas_doc_list.html#FILE_HTTP_COPY_IUG">
+FILE_HTTP_COPY_IUG</A>
+<br>This procedure is the modified version of file_http_copy in tdas_6_00 for IUGONET data.
+<LI><A HREF="iugonet/load_udas_doc_list.html#FILE_RETRIEVE_IUG">
+FILE_RETRIEVE_IUG</A>
+<br>This procedure is the modified version of file_retrieve in tdas_6_00 for IUGONET data.
 <A NAME="LIST_G">
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#GET_SPHCNTR">
 GET_SPHCNTR</A>
@@ -70,6 +75,8 @@ GUI_LOAD_ACKNOWLEDGEMENT</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_BLR_RISH_TXT">
 IUG_CRIB_BLR_RISH_TXT</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_EAR">IUG_CRIB_EAR</A>
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_GMAG_NIPR">
+IUG_CRIB_GMAG_NIPR</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_LTR_RISH_TXT">
 IUG_CRIB_LTR_RISH_TXT</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_METEOR_RISH_KTB_NC">
@@ -118,10 +125,10 @@ IUG_LOAD_EAR_TROP_TXT</A>
 IUG_LOAD_GMAG_MM210</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_GMAG_NIPR">
 IUG_LOAD_GMAG_NIPR</A>
-<br>Loading the fluxgate magnetometer data obtained by NIPR.
+<br>Loads the fluxgate magnetometer data obtained by NIPR.
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_GMAG_SERC">
 IUG_LOAD_GMAG_SERC</A>
-<br>This procedure allows you to download and plot MAGDAS magnetometer data on TDAS.
+<br>This procedure allows you to download and plot MAGDAS 1-minute
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_GMAG_WDC">
 IUG_LOAD_GMAG_WDC</A>
 <br>Loading geomag data in WDC format from WDC for Geomag Kyoto.
@@ -178,6 +185,7 @@ IUG_LOAD_MU_TROP_NC</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_MU_TROP_TXT">
 IUG_LOAD_MU_TROP_TXT</A>
 <br>Queries the Kyoto_RISH servers for the standard observation data of the
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_SDFIT">IUG_LOAD_SDFIT</A>
 <A NAME="LIST_L">
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#LOADCT_SD">
 LOADCT_SD</A>
