Modified html document files.

--- a/iugonet/examples_udas_doc_list.html
+++ b/iugonet/examples_udas_doc_list.html
@@ -11,7 +11,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Fri May 13 13:31:58 2011.<P>
+<STRONG>Last modified: </STRONG>Thu May 19 23:20:19 2011.<P>
  
 <HR>
  
@@ -23,6 +23,7 @@ This page was created by the IDL library routine
 <LI><A HREF="#IUG_CRIB_BLR_RISH_TXT">IUG_CRIB_BLR_RISH_TXT</A>
 <LI><A HREF="#IUG_CRIB_EAR">IUG_CRIB_EAR</A>
 <LI><A HREF="#IUG_CRIB_GMAG_NIPR">IUG_CRIB_GMAG_NIPR</A>
+<LI><A HREF="#IUG_CRIB_GMAG_SERC">IUG_CRIB_GMAG_SERC</A>
 <LI><A HREF="#IUG_CRIB_LTR_RISH_TXT">IUG_CRIB_LTR_RISH_TXT</A>
 <LI><A HREF="#IUG_CRIB_METEOR_RISH_KTB_NC">IUG_CRIB_METEOR_RISH_KTB_NC</A>
 <LI><A HREF="#IUG_CRIB_METEOR_RISH_SRP_NC">IUG_CRIB_METEOR_RISH_SRP_NC</A>
@@ -109,7 +110,7 @@ Modifications:
 <A NAME="IUG_CRIB_GMAG_NIPR">
 <H2>IUG_CRIB_GMAG_NIPR</H2></A>
 <A HREF="#IUG_CRIB_EAR">[Previous Routine]</A>
-<A HREF="#IUG_CRIB_LTR_RISH_TXT">[Next Routine]</A>
+<A HREF="#IUG_CRIB_GMAG_SERC">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
  PROGRAM: iug_crib_gmag_nipr
@@ -130,9 +131,33 @@ Modifications:
 <STRONG>(See <A href="examples/iug_crib_gmag_nipr.pro">iugonet/examples/iug_crib_gmag_nipr.pro</A>)</STRONG><P>
 <HR>
  
+<A NAME="IUG_CRIB_GMAG_SERC">
+<H2>IUG_CRIB_GMAG_SERC</H2></A>
+<A HREF="#IUG_CRIB_GMAG_NIPR">[Previous Routine]</A>
+<A HREF="#IUG_CRIB_LTR_RISH_TXT">[Next Routine]</A>
+<A HREF="#ROUTINELIST">[List of Routines]</A>
+<PRE>
+ PROGRAM: iug_crib_gmag_serc
+   This is an example crib sheet that will load the MAGDAS magnetometer data
+   released by Space Environment Research Center(SERC), Kyushu University, Japan. 
+   Open this file in a text editor and then use copy and paste to copy
+   selected lines into an idl window. Or alternatively compile and run
+   using the command:
+     .RUN IUG_CRIB_GMAG_SERC
+
+ NOTE: For more information about MAGDAS and its rules of the road, see:
+       http://magdas.serc.kyushu-u.ac.jp/
+ Written by: Shuji Abe,  May 01, 2011
+             Space Environment Research Center, Kyushu University, Japan 
+             abeshu _at_ serc.kyushu-u.ac.jp
+
+</PRE><P>
+<STRONG>(See <A href="examples/iug_crib_gmag_serc.pro">iugonet/examples/iug_crib_gmag_serc.pro</A>)</STRONG><P>
+<HR>
+ 
 <A NAME="IUG_CRIB_LTR_RISH_TXT">
 <H2>IUG_CRIB_LTR_RISH_TXT</H2></A>
-<A HREF="#IUG_CRIB_GMAG_NIPR">[Previous Routine]</A>
+<A HREF="#IUG_CRIB_GMAG_SERC">[Previous Routine]</A>
 <A HREF="#IUG_CRIB_METEOR_RISH_KTB_NC">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
