--- a/_udas_doc.html
+++ b/_udas_doc.html
@@ -12,7 +12,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Fri May 13 13:31:58 2011.<P>
+<STRONG>Last modified: </STRONG>Thu May 19 23:20:19 2011.<P>
  
 <HR>
  
@@ -77,6 +77,8 @@ IUG_CRIB_BLR_RISH_TXT</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_EAR">IUG_CRIB_EAR</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_GMAG_NIPR">
 IUG_CRIB_GMAG_NIPR</A>
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_GMAG_SERC">
+IUG_CRIB_GMAG_SERC</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_LTR_RISH_TXT">
 IUG_CRIB_LTR_RISH_TXT</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_METEOR_RISH_KTB_NC">
