Modified html document files.

--- a/_udas_doc.html
+++ b/_udas_doc.html
@@ -12,7 +12,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Thu May 19 23:20:19 2011.<P>
+<STRONG>Last modified: </STRONG>Thu Jun 16 11:10:56 2011.<P>
  
 <HR>
  
@@ -31,6 +31,8 @@ This page was created by the IDL library routine
 <A HREF="#LIST_L">L</A>
 ,
 <A HREF="#LIST_O">O</A>
+,
+<A HREF="#LIST_P">P</A>
 ,
 <A HREF="#LIST_S">S</A>
 ,
@@ -196,6 +198,10 @@ LOADCT_SD</A>
 OVERLAY_POLAR_COAST">OVERLAY_POLAR_COAST</A>
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#
 OVERLAY_POLAR_SDFIT">OVERLAY_POLAR_SDFIT</A>
+<A NAME="LIST_P">
+<LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#
+PLOT_POLAR_SDFIT">PLOT_POLAR_SDFIT</A>
+<br>Draw a fan plot of SD data on the world map
 <A NAME="LIST_S">
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#SD_AACGMLIB">
 SD_AACGMLIB</A>
